docs: include basic `swagger` configuration
